--- a/slides/example/index.html
+++ b/slides/example/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=4321&amp;path=livereload" data-no-instant defer></script>
+<head>
   
   
 
@@ -17,10 +17,10 @@
   <link rel="manifest" href="/index.webmanifest">
   
   
-  <link rel="icon" type="image/png" href="/media/icon_hu_eb10e4dd28debfcc.png">
-  <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu_290ad9bbfe5a74be.png">
+  <link rel="icon" type="image/png" href="/media/icon_hu_7d87ea9ce2e4cbac.png">
+  <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu_ab38f4e03c2f3914.png">
 
-  <link rel="canonical" href="http://localhost:4321/slides/example/">
+  <link rel="canonical" href="https://jung-ho-choi.github.io/slides/example/">
 
   <title>Slides | Jung Ho Choi</title>
 
